--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: java
 jdk:
   - oraclejdk11
 
+services:
+  - redis-server
+  
 script:
   - mvn -e -DTRAVIS_JOB_ID=$TRAVIS_JOB_ID clean install
 
